# bucketgames

./: .gitignore  README.md  pyproject.toml
src/bucketgames/: generate.py  main.py  new.py  s3.py  upload.py  webserver.py
src/bucketgames/resources/: bucket.toml  game.toml  gitignore
src/bucketgames/templates/: bucket.html  game.html  script.js  style.css
src/bucketgames/toml/: bucket.toml  credentials.toml  game.toml
