[project]
name = "bucketgames"
version = "0.1.0"
description = "Tool for hosting game distributions in buckets."
readme = "README.md"
authors = [
    { name = "Tom Rothamel", email = "tom@rothamel.us" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
]

[project.scripts]
bucketgames = "bucketgames.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
